유사도 로딩 문제 해결