@@ -1,52 +1,76 @@
 package me.hys.carematebackend.service;
 
+import com.fasterxml.jackson.core.JsonParser;
+import com.fasterxml.jackson.core.JsonToken;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import jakarta.annotation.PostConstruct;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 @Service
 public class LtcSimilarService {
 
-    private final Map<String, Map<String, Object>> facilityById = new HashMap<>();
+    private final ObjectMapper objectMapper = new ObjectMapper();
+    private final ClassPathResource resource =
+            new ClassPathResource("output/facilities_final.json");
 
-    @PostConstruct
-    public void load() throws IOException {
-        ClassPathResource resource =
-                new ClassPathResource("output/facilities_final.json");
+    // 요청된 것만 캐시 (선택)
+    private final Map<String, Map<String, Object>> cache = new HashMap<>();
 
-        String json = new String(
-                resource.getInputStream().readAllBytes(),
-                StandardCharsets.UTF_8
-        );
-        ObjectMapper om = new ObjectMapper();
-        List<Map<String, Object>> list = om.readValue(json, new TypeReference<>() {});
-        for (Map<String, Object> fac : list) {
-            String instCode = (String) fac.get("instCode");
-            facilityById.put(instCode, fac);
+    // =========================
+    // 단일 시설 조회 (Streaming)
+    // =========================
+    public Map<String, Object> findByInstCode(String instCode) {
+        if (cache.containsKey(instCode)) {
+            return cache.get(instCode);
         }
-        System.out.println("[LtcSimilarService] loaded " + facilityById.size() + " facilities");
+
+        try (JsonParser parser =
+                     objectMapper.getFactory().createParser(resource.getInputStream())) {
+
+            // JSON이 배열이므로 START_ARRAY부터
+            if (parser.nextToken() != JsonToken.START_ARRAY) {
+                return null;
+            }
+
+            while (parser.nextToken() != JsonToken.END_ARRAY) {
+                Map<String, Object> fac =
+                        objectMapper.readValue(parser, new TypeReference<>() {});
+                if (instCode.equals(fac.get("instCode"))) {
+                    cache.put(instCode, fac); // 캐시
+                    return fac;
+                }
+            }
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
+        return null;
     }
 
-    // 유사 요양원 출력
+    // =========================
+    // 유사 시설 조회
+    // =========================
     public List<Map<String, Object>> similar(String instCode) {
-        Map<String, Object> fac = facilityById.get(instCode);
-        if (fac == null) return Collections.emptyList();
+        Map<String, Object> fac = findByInstCode(instCode);
+        if (fac == null) return List.of();
 
-        List<Map<String, Object>> sim = (List<Map<String, Object>>) fac.getOrDefault("similar", List.of());
+        List<Map<String, Object>> sim =
+                (List<Map<String, Object>>) fac.getOrDefault("similar", List.of());
+
         List<Map<String, Object>> result = new ArrayList<>();
+
         for (Map<String, Object> s : sim) {
             String otherId = (String) s.get("instCode");
-            Map<String, Object> other = facilityById.get(otherId);
+            Map<String, Object> other = findByInstCode(otherId);
             if (other != null) {
                 result.add(other);
             }
         }
+
         return result;
     }
 }
